# blog_flask

./: .gitignore  .platform.app.yaml  Dockerfile  pyproject.toml  wsgi.py
blog_flask/: admin_init.py  app.py  blog.db  config.py  models.py
blog_flask/admin/: __init__.py  views.py
blog_flask/api/: artical.py  author.py  tag.py  user.py
blog_flask/api/permissions/: user.py
blog_flask/articles/: views.py
blog_flask/auth/: models.py  views.py
blog_flask/authors/: views.py
blog_flask/forms/: user.py
blog_flask/schemas/: __init__.py  user.py
blog_flask/templates/: base.html  navbar.html
blog_flask/templates/articles/: create.html  detail.html  list.html
blog_flask/templates/auth/: login.html
blog_flask/templates/authors/: list.html
blog_flask/templates/users/: detail.html  list.html  register.html
blog_flask/users/: models.py  views.py
migrations/: alembic.ini
migrations/versions/: 27afce10c5e4_.py  3d631b755b30_.py  67191bbf6435_.py  70dc685232d3_.py  77ef8aaa5c3a_.py  96cf6173f2e1_.py
tests/: test_blog_flask.py
