[tool.poetry]
name = "blog_flask"
version = "0.1.0"
description = ""
authors = ["krasmich <kraskovmichael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
Flask-SQLAlchemy = "^3.0.2"
db = "^0.1.1"
flask-login = "^0.6.2"
Flask-WTF = "^1.0.1"
email-validator = "^1.3.0"
Flask-Migrate = "^4.0.1"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
