[tool.poetry]
name = "blog_flask"
version = "0.1.0"
description = ""
authors = ["krasmich <kraskovmichael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "1.1.4"
Flask-SQLAlchemy = "2.5.1"
db = "^0.1.1"
flask-login = "^0.6.2"
Flask-WTF = "^1.0.1"
email-validator = "^1.3.0"
Flask-Migrate = "^4.0.1"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
WTForms = "^3.0.1"
Flask-Admin = "^1.6.0"
Flask-COMBO-JSONAPI = "^1.1.0"
markupsafe = "2.0.1"
apispec = "4.7.1"
ComboJSONAPI = "1.1.1"
PyYAML = "5.4.1"
requests = "^2.28.2"
gunicorn = "^20.1.0"
importlib-resources = "^5.10.2"
zipp = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
